SequenceAlignment/err.txt
main.cpp: In function ‘int main(int, char**)’:
main.cpp:30:66: error: expected primary-expression before ‘)’ token
  auto retval = alignment.alignment("xxxcde","abcxdex",BasicPolicy);
                                                                  ^
main.cpp:33:65: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment("deadly","ddgearlyk",PenaltyPolicy);
                                                                 ^
main.cpp:36:65: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, HBB_PANTR,PenaltyPolicy);
                                                                 ^
main.cpp:37:28: error: ‘retavl’ was not declared in this scope
  alignment.print_alignment(retavl);
                            ^~~~~~
main.cpp:37:28: note: suggested alternative: ‘__tanl’
  alignment.print_alignment(retavl);
                            ^~~~~~
                            __tanl
main.cpp:39:66: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, HBB1_MOUSE,PenaltyPolicy);
                                                                  ^
main.cpp:42:65: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, HBB_CHICK,PenaltyPolicy);
                                                                 ^
main.cpp:45:68: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, Q802A3_FUGRU,PenaltyPolicy);
                                                                    ^
main.cpp:48:68: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, Q540F0_VIGUN,PenaltyPolicy);
                                                                    ^
main.cpp:51:67: error: expected primary-expression before ‘)’ token
  retval = alignment.alignment(HBB_HUMAN, INSL3_HUMAN,PenaltyPolicy);
                                                                   ^
make: *** [main.o] Error 1
